# Pdf_To_Text_Gen

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  ai_agents_run.py  data_base_testing.py  demo.py  demo2.py  docker-compose.yml  gemini_run.py  index.py  main.py  models.py  package-lock.json  pinecone_v_db_run.py  pyproject.toml  requirements.txt  services.py
ai_agents/: data_decison_agent.py  demo.py  file_data_response.py  invoice_agent.py  invoice_data_agent.py  main_agent.py  multi_agent_handoff.py  multi_agents_manager.py  pdf_agent.py  run_invoice_sql_agnet.py  run_rag_sql_agent.py  sql_agent.py
backend_server/: auth.py  event_generator.py  router.py
charts/: bar_chart.py  pie_chart.py
clean_pdf_data/: extract_pages.py  key_performance_indicator.py  pdf_json_data.py  pdf_plain_text.py  pdf_to_json_data.py
data_model/: data_decison_agent.py  invoice_data_agent.py  main_agent.py  multi_agent_handoff.py  run_rag_sql_model.py
database_sql/: .env  alembic.ini  create_table.py  database_connection.py  delete_dishes_by_resturaent_id.py  delete_items.py  demo.py  file.py  insert_and_get_file_data.py  insert_data.py  insert_invoice_data.py  models.py  query_data.py  update_data.py  user_models.py
invoice-pdf/: chat.tsx
json_data/: cleaned_data.json  transactions.json  transactions2.json  transactions4.json
mcp_server/: custom_mcp_server.py  demo.py  mcp_client_langgraph.py  web_app.py
open_ai/: .gitignore  client.py  create_pdf_embedings.py  file_data_synthesis.py  image_to_product_classification.py  invoice_pdf_to_json.py  invoice_rag_result.py  (+5 more)
(+72 files in other folders)
